# agreements

./: .gitignore  README.md  generate.py  pyproject.toml  vars.yml.sample
agreements/business-development-terms/: content.md
agreements/general-teaming-tnc/: content.md
agreements/general-terms-of-engagement/: content.md
agreements/introducer-agreement/: content.md
agreements/llp-agreement/: content.md
agreements/opportunity-registration-form/: content.md
agreements/order-form/: content.md
agreements/professional-services-tos/: content.md
agreements/project-profit-participation-agreement/: content.md
agreements/ps-whitelabel-agreement/: content.md
agreements/referral-registration/: content.md
agreements/subcontracting-terms/: content.md
agreements/subcontractor-agreement/: content.md
agreements/training-tos/: content.md
src/agreements/: __init__.py
template/: appendix.ott
templates/: appendix.ott  default.odt  default.ott
terms-of-service/: general-terms-of-engagement.md
