[project]
name = "agreements"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Izhar Firdaus", email = "kagesenshi.87@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
